# Babbla

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.beads/: issues.jsonl
docs/: SPECIFICATION.md
history/: IMPLEMENTATION_PLAN.md
src/babbla/: __init__.py  __main__.py  chunker.py  cli.py  config.py  elevenlabs_provider.py  errors.py  logging_utils.py  metrics.py  playback.py  provider_base.py  streaming_controller.py  voice_catalog.py
src/voicecli/: __init__.py  __main__.py  cache.py  chunker.py  cli.py  config.py  elevenlabs_provider.py  errors.py  logging_utils.py  metrics.py  playback.py  streaming_controller.py  voice_catalog.py  wav_saver.py
tests/: conftest.py  test_cache.py  test_chunker.py  test_cli.py  test_cli_detach.py  test_config.py  test_latency_harness.py  test_logging_utils.py  test_metrics.py  test_playback.py  test_provider.py  test_provider_stub.py  test_streaming_controller.py  test_voice_catalog.py  test_wav_saver.py
tools/: latency_harness.py
